new command shell;\nadding commands;\nimproving couch support