@@ -1,3 +1,18 @@
+/*
+ * Copyright 2011 Simon Raess
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package com.github.rasifix.trainings.ical.internal;
 
 import java.io.BufferedReader;
@@ -18,13 +33,14 @@ public class ICalExporter implements ActivityExporter {
 		Date endDate = activity.getEndTime();
 		String sport = activity.getSport();
 		
-		StringBuilder builder = new StringBuilder("/usr/bin/osascript ");
-		builder.append("/Users/sir/.trainings/ical.scpt ");
-		builder.append(format(startDate)).append(" ");
-		builder.append(format(endDate)).append(" ");
-		builder.append(sport);
-		
-        Process process = Runtime.getRuntime().exec(builder.toString());
+		ProcessBuilder processBuilder = new ProcessBuilder(
+				"/usr/bin/osascript", 
+				"/Users/sir/.trainings/ical.scpt",
+				format(startDate),
+				format(endDate),
+				sport);
+		processBuilder.redirectErrorStream(true);
+        Process process = processBuilder.start();
         
         BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
         String line = reader.readLine();
